# glacis-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
demos/: chain_revision_demo.ipynb  custom_control_demo.ipynb  glacis.yaml  glacis_integrations_demo.ipynb  glacis_openai_demo.ipynb  offline_attestation_demo.ipynb  online_attestation_demo.ipynb
docs/: README.md  architecture.md  astro.config.mjs  package-lock.json  package.json  pipeline-flowchart.md
docs/public/: glacis-convert.js  robots.txt
docs/src/content/docs/: index.mdx
docs/src/content/docs/sdk/python/: anthropic.mdx  api.mdx  batch.mdx  cli.mdx  configuration.mdx  controls.mdx  gemini.mdx  installation.mdx  judges.mdx  litellm.mdx  offline.mdx  openai.mdx  pipelines.mdx  quickstart.mdx  sampling.mdx  storage.mdx
docs/src/styles/: custom.css
examples/: .env.example  basic_offline.py  offline_azure.py  online_azure.py  online_openai.py
glacis/: __init__.py  __main__.py  client.py  config.py  crypto.py  demo.html  models.py  storage.py  streaming.py  verify.py  wasm_runtime.py
glacis/controls/: __init__.py  base.py  content_safety.py  grounding.py  jailbreak.py  pii.py  prompt_security.py  topic.py  word_filter.py
glacis/integrations/: __init__.py  anthropic.py  azure.py  base.py  gemini.py  litellm.py  openai.py
glacis/judges/: __init__.py  base.py  config.py
glacis/wasm/: s3p_core_wasi.wasm
judges/: __init__.py  glacis.yaml  judge_demo_pipeline.ipynb  qa_explain_judge.py
judges/demo_evidence/: evidence.jsonl  receipts.jsonl
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_controls.py  test_crypto.py  test_custom_controls.py  test_custom_controls_yaml.py  test_integration_base.py  test_integration_e2e.py  test_integration_litellm.py  test_integrations.py  test_judge_demo.py  test_judges.py  test_models.py  test_new_controls.py  test_offline.py  test_pipeline_context.py  test_qa_generation_demo.py  test_storage.py  test_streaming.py  test_verify.py  test_word_filter.py
