[project]
name = "glacis"
version = "0.6.0"
description = "GLACIS SDK for Python - AI Compliance Attestation"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["ai", "compliance", "attestation", "transparency", "logging"]
authors = [
    { name = "GLACIS", email = "sdk@glacis.io" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
gemini = [
    "google-genai>=1.0.0",
]
redaction = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.5.0",
    "pyyaml>=6.0.0",
]
jailbreak = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "pyyaml>=6.0.0",
]
controls = [
    "glacis[redaction,jailbreak]",
]
all = [
    "glacis[dev,openai,anthropic,gemini,controls]",
]

[project.urls]
Homepage = "https://glacis.io"
Documentation = "https://docs.glacis.io/sdk/python"
Repository = "https://github.com/Glacis-io/glacis-python"
Issues = "https://github.com/Glacis-io/glacis-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glacis"]

[tool.hatch.build.targets.wheel.sources]
"glacis" = "glacis"

[tool.hatch.build.targets.sdist]
include = [
    "glacis/**/*.py",
]

[tool.hatch.build]
include = [
    "glacis/**/*.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "openai",
    "openai.*",
    "anthropic",
    "anthropic.*",
    "google",
    "google.*",
    "google.genai",
    "google.genai.*",
    "presidio_analyzer",
    "presidio_analyzer.*",
    "presidio_anonymizer",
    "presidio_anonymizer.*",
    "spacy",
    "spacy.*",
    "yaml",
    "yaml.*",
    "transformers",
    "transformers.*",
    "torch",
    "torch.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = false

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
